[tool.poetry]
name = "collaborator-extrator"
version = "0.1.0"
description = ""
authors = ["Roman Skok <rma.skok@gmail.com>"]
readme = "README.md"
packages = [{include = "collaborator-extrator"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
