[tool.poetry]
name = "collaborator-extrator"
version = "0.1.0"
description = ""
authors = ["Roman Skok <rma.skok@gmail.com>"]
readme = "README.md"
packages = [{include = "collaborator-extrator"}]

[tool.poetry.dependencies]
python = "^3.9"
rpaframework = "^19.1.1"
simple-term-menu = "^1.5.2"
pandas = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
